--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,7 +49,8 @@ label {
     align-self: start;
 }
 input[type="text"] {
-    width: 100%;
+    width: calc(100% - 40px); /* Adjust width to account for padding/margin */
+    /* width: 100%; */
     padding: 18px;
     margin-bottom: 30px;
     /* border: 2px solid #d1d1d1; */
